local flows with images and video

--- a/notebooks/fl-diabetes-prediction/local/do1.ipynb
+++ b/notebooks/fl-diabetes-prediction/local/do1.ipynb
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../images/do1LogsIntoLocalDatasite.png\" width=\"60%\" alt=\"DO1 logs into local datasite\">"
+    "<img src=\"../images/do1LogsInDatasite.png\" width=\"60%\" alt=\"DO1 logs into local datasite\">"
    ]
   },
   {
@@ -124,7 +124,7 @@
     "DO1 creates a syft dataset, where the mock part is uploaded to the datasite and is public to the SyftBox network, and the private part stays local (never get shared)\n",
     "\n",
     "\n",
-    "<img src=\"../images/do1CreatesADataset.png\" width=\"70%\" alt=\"partitioned dataset\">"
+    "<img src=\"../images/do1CreatesASyftDataset.png\" width=\"55%\" alt=\"partitioned dataset\">"
    ]
   },
   {
@@ -146,6 +146,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"../images/doWaitsForJobs.png\" width=\"40%\" alt=\"do waiting for jobs\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3. Review and Run Jobs"
    ]
   },
@@ -153,16 +160,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./images/doWaitsForJobs.png\" width=\"40%\" alt=\"DO waits for jobs\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "By running the job privately, the DO trains the model on their local data, and then sends the trained model back to the DS\n",
+    "After the DS submits a job, the DO sees that it has appeared on their datasite, and can review it\n",
     "\n",
-    "<img src=\"./images/doSendModels.png\" width=\"80%\" alt=\"DS Sends Models\">"
+    "<img src=\"../images/do1ReviewsJob.png\" width=\"40%\" alt=\"do waiting for jobs\">"
    ]
   },
   {
@@ -172,15 +172,6 @@
    "outputs": [],
    "source": [
     "jobs = do1.jobs.get_all(status=\"pending_code_review\")\n",
-    "jobs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "job = jobs[-1]\n",
     "job"
    ]
@@ -193,6 +184,24 @@
    "source": [
     "# same as job.code.describe()\n",
     "job.show_user_code()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By running `run_private(job)`, the DO1 runs the `syft_flwr` client code that trains the model received from the aggregator on their private data and then sends the updated model back to the aggregator. This happens for multiple rounds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import Video\n",
+    "\n",
+    "Video(\"../images/flTraining.mp4\", embed=True)"
    ]
   },
   {
