--- a/notebooks/fl-diabetes-prediction/local/do2.ipynb
+++ b/notebooks/fl-diabetes-prediction/local/do2.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../images/do2LogsIntoLocalDatasite.png\" width=\"70%\" alt=\"DO2 logs into local datasite\">"
+    "<img src=\"../images/do2LogsInDatasite.png\" width=\"70%\" alt=\"DO2 logs into local datasite\">"
    ]
   },
   {
@@ -101,7 +101,7 @@
    "source": [
     "DO2 also creates a syft dataset, where the mock part is uploaded to the datasite and is public to the SyftBox network, and the private part stays local (never get shared)\n",
     "\n",
-    "<img src=\"../images/do2CreatesADataset.png\" width=\"70%\" alt=\"partitioned dataset\">"
+    "<img src=\"../images/do2CreatesSyftADataset.png\" width=\"55%\" alt=\"do2 creates a syft dataset\">"
    ]
   },
   {
@@ -123,7 +123,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"../images/doWaitsForJobs.png\" width=\"40%\" alt=\"do waiting for jobs\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Review and Run Jobs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After the DS submits a job, the DO2 will also see that there is one job from the DS \n",
+    "\n",
+    "<img src=\"../images/do2ReviewsJob.png\" width=\"41%\" alt=\"do waiting for jobs\">"
    ]
   },
   {
@@ -133,15 +149,6 @@
    "outputs": [],
    "source": [
     "jobs = do2.jobs.get_all(status=\"pending_code_review\")\n",
-    "jobs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "job = jobs[-1]\n",
     "job"
    ]
@@ -157,23 +164,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "\n",
-    "res_job = do2.run_private(job)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By running the job privately, the DO trains the model on their local data, and then sends the trained model back to the DS\n",
-    "\n",
-    "<img src=\"./images/doSendModels.png\" width=\"80%\" alt=\"DS Sends Models\">"
+    "By running `run_private(job)`, the DO1 runs the `syft_flwr` client code that trains the model received from the aggregator on their private data and then sends the updated model back to the aggregator. This happens for multiple rounds"
    ]
   },
   {
@@ -181,7 +175,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from IPython.display import Video\n",
+    "\n",
+    "Video(\"../images/flTraining.mp4\", embed=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res_job = do2.run_private(job)"
+   ]
   }
  ],
  "metadata": {
@@ -200,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
