--- a/notebooks/fl-diabetes-prediction/local/ds.ipynb
+++ b/notebooks/fl-diabetes-prediction/local/ds.ipynb
@@ -29,7 +29,10 @@
    "source": [
     "## 1. DS logs into DO1 and DO2's datasites as guest\n",
     "\n",
-    "<img src=\"../images/dsLogsInAsGuest.png\" width=\"60%\" alt=\"DS logs into DOs' datasites as guests\">"
+    "\n",
+    "DO will also have their own datasite where they can log in as an admin, but it's not needed in this workflow\n",
+    "\n",
+    "<img src=\"../images/dsLogsInAsGuests.png\" width=\"53%\" alt=\"DS logs into DOs' datasites as guests\">"
    ]
   },
   {
@@ -111,7 +114,7 @@
     "\n",
     "DS can access the DOs' mock data, but can't access the private data\n",
     "\n",
-    "<img src=\"../images/dsExploresMockData.png\" width=\"80%\" alt=\"DS explores datasets\">"
+    "<img src=\"../images/dsExploresDOsDatasets.png\" width=\"70%\" alt=\"DS explores datasets\">"
    ]
   },
   {
@@ -176,14 +179,17 @@
     "\n",
     "Concretely, for diabetes prediction, we have the project code under the path `../fl-diabetes-prediction`\n",
     "\n",
-    "<img src=\"../images/dsPreparesSyftFlwrProject.png\" width=\"25%\" alt=\"DS explores datasets\">"
+    "\n",
+    "<img src=\"../images/dsPreparesSyftFlwrProject.png\" width=\"30%\" alt=\"DS explores datasets\">\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the context of `syft_flwr`, we have the following parties running the following code:"
+    "where the DS will run the `ServerApp` (defined in `server_app.py`), and the `ClientApp` (in `client_app.py`)\n",
+    "\n",
+    "<img src=\"../images/dsSyftFlwrProjectArch.png\" width=\"70%\" alt=\"Your second image description\">\n"
    ]
   },
   {
@@ -204,7 +210,7 @@
     "\n",
     "<img src=\"../images/client_fn.png\" width=\"70%\" alt=\"client_fn comparison\">\n",
     "\n",
-    "where the `load_syftbox_dataset` (used by `syft_flwr`) and the `load_flwr_data` (used by pure Flower) differ a bit like below:  \n",
+    "where the `load_syftbox_dataset` (used by `syft_flwr`) and the `load_flwr_data` (used by Flower) differ a bit like below:  \n",
     "\n",
     "<img src=\"../images/load_syftbox_flwr_dataset.png\" width=\"70%\" alt=\"load datasets comparison\">\n"
    ]
@@ -215,13 +221,20 @@
    "source": [
     "## 4. DS bootstraps the `syft_flwr` project\n",
     "\n",
-    "TODO: What does it mean to \"bootstrap\"?  \n",
-    "- What does it do?\n",
-    "- Why do we do it? (what's the role of `main.py` and what's the info being added to the toml file does?)\n",
+    "After the DS has prepared the `syft_flwr` project code, they can run the `syft_flwr.bootstrap` command to modify the project's metadata in `pyproject.toml` that specifies the unique name of the FL run, who are the data owners and who is the aggregator\n",
+    "```\n",
+    "[tool.syft_flwr]\n",
+    "app_name = \"ds@openmined.org_fl-diabetes-prediction_1753435643\"\n",
+    "datasites = [\n",
+    "    \"do1@openmined.org\",\n",
+    "    \"do2@openmined.org\",\n",
+    "]\n",
+    "aggregator = \"ds@openmined.org\"\n",
+    "```\n",
+    "and creates the `main.py` to specifies who runs what based on the new metatdata information\n",
     "\n",
-    "TODO: Image of Flower code before and after bootstrap \n",
     "\n",
-    "TODO: Explain a difference of Flower and syft_flwr projects (what code need to be modified) via an image (don't open the code files) - show git diff"
+    "<img src=\"../images/dsBootstrapping.png\" width=\"50%\" alt=\"Your second image description\">\n"
    ]
   },
   {
@@ -244,9 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. DS runs `flwr` and `syft_flwr` simulations (optional)\n",
-    "\n",
-    "TODO: it's against mock data, since DS only has acccess to DOs' mock data locally, and to test the code runs before submitting"
+    "## 5. DS runs `flwr` and `syft_flwr` simulations (optional)"
    ]
   },
   {
@@ -256,6 +267,13 @@
    "outputs": [],
    "source": [
     "RUN_SIMULATION = True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First we run normal Flower simulation with `flwr run`"
    ]
   },
   {
@@ -276,16 +294,16 @@
    "source": [
     "# clean up\n",
     "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"fl_diabetes_prediction\" / \"__pycache__\"}  # clean before submitting\n",
-    "!rm -rf ../weights/  #"
+    "!rm -rf {\"../weights/\"}"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "mock_paths"
+    "Now the DS can run `syft_flwr` simulation on DO's mock data by launching 2 threads that run DOs code and a thread that runs the DS code \n",
+    "\n",
+    "<img src=\"../images/dsRunsSyftFLWRSimulation.png\" width=\"50%\" alt=\"client_fn comparison\">"
    ]
   },
   {
@@ -308,7 +326,7 @@
     "# clean up before submitting jobs  (TODO: make it in the backend)\n",
     "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"fl_diabetes_prediction\" / \"__pycache__\"}\n",
     "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"simulation_logs\"}\n",
-    "!rm -rf weights/"
+    "!rm -rf {\"../weights/\"}"
    ]
   },
   {
@@ -322,7 +340,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./images/dsSendsJobs.png\" width=\"80%\" alt=\"DS Submits Jobs\">"
+    "The DS submits the code in `fl-diabetes-prediction` to the DO's datasites\n",
+    "\n",
+    "<img src=\"../images/dsSubmitsJobs.png\" width=\"54%\" alt=\"DS submits jobs\">"
    ]
   },
   {
@@ -334,11 +354,10 @@
     "for client in do_clients:\n",
     "    print(f\"sending job to {client.host}\")\n",
     "    job = client.jobs.submit(\n",
-    "        name=\"fl-diabetes-model\",\n",
+    "        name=\"fl-diabetes-prediction\",\n",
     "        user_code_path=SYFT_FLWR_PROJECT_PATH,\n",
     "        dataset_name=SYFTBOX_DATASET_NAME,\n",
     "        entrypoint=\"main.py\",\n",
-    "        description=\"trust me bro! :)) just kidding, check the code please!\",\n",
     "    )\n",
     "    print(job)"
    ]
@@ -347,7 +366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./images/dsDoneSubmittingJobs.png\" width=\"40%\" alt=\"DS waits for jobs to be approved\">"
+    "<img src=\"../images/dsWaitsForJobsToBeApproved.png\" width=\"35%\" alt=\"DS waits for jobs to be approved\">"
    ]
   },
   {
@@ -356,7 +375,18 @@
    "source": [
     "## 7. DS starts the FL server code\n",
     "\n",
-    "TODO: having a GIF to demonstrate the long-running jobs that's exchanging the models between the clients and server"
+    "By running the FL server code, the DS aggregates the models trained on DOs' private local data into an improved global model in multiple rounds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import Video\n",
+    "\n",
+    "Video(\"../images/flTraining.mp4\", embed=True)"
    ]
   },
   {
@@ -372,23 +402,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By running the FL server code, the DS aggregates the models trained on DOs' private local data into an improved global model\n",
-    "\n",
-    "<img src=\"./images/dsAggregateModels.png\" width=\"30%\" alt=\"DS Aggregates Models\">"
+    "## 8. DS Observes the Results"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## DS Observes the Results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now the DS can monitor the aggregated models trained no DO's private datasets in the `weights` folder"
+    "Now the DS can monitor the aggregated models trained on DO's private datasets in the `weights` folder"
    ]
   }
  ],
@@ -408,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
