embed fl training video as markdown

--- a/notebooks/fl-diabetes-prediction/local/do1.ipynb
+++ b/notebooks/fl-diabetes-prediction/local/do1.ipynb
@@ -8,8 +8,9 @@
     "\n",
     "Outline of what DO1 will do\n",
     "\n",
+    "0. Setup local syftbox network for local experimentations (only needed for the local testing case)\n",
     "1. DO logs into the datasite as an admin\n",
-    "2. DO creates the dataset \n",
+    "2. DO creates a Syft dataset \n",
     "3. DO reviews and run jobs submitted by data scientists on DO's private data"
    ]
   },
@@ -190,18 +191,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By running `run_private(job)`, the DO1 runs the `syft_flwr` client code that trains the model received from the aggregator on their private data and then sends the updated model back to the aggregator. This happens for multiple rounds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.display import Video\n",
+    "By running `run_private(job)`, the DO1 runs the `syft_flwr` client code that trains the model received from the aggregator on their private data and then sends the updated model back to the aggregator. This happens for multiple rounds\n",
     "\n",
-    "Video(\"../images/flTraining.mp4\", embed=True)"
+    "<video width=\"90%\" controls>\n",
+    "  <source src=\"../images/flTraining.mp4\" type=\"video/mp4\">\n",
+    "  Your browser does not support the video tag.\n",
+    "</video>"
    ]
   },
   {
