--- a/notebooks/fl-diabetes-prediction/local/do2.ipynb
+++ b/notebooks/fl-diabetes-prediction/local/do2.ipynb
@@ -6,8 +6,10 @@
    "source": [
     "# Data Owner 02\n",
     "\n",
+    "Outline of what DO2 will do\n",
+    "\n",
     "1. DO logs into the datasite as an admin\n",
-    "2. DO creates the dataset \n",
+    "2. DO creates a Syft dataset \n",
     "3. DO reviews and run jobs submitted by data scientists on DO's private data"
    ]
   },
@@ -167,18 +169,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By running `run_private(job)`, the DO1 runs the `syft_flwr` client code that trains the model received from the aggregator on their private data and then sends the updated model back to the aggregator. This happens for multiple rounds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.display import Video\n",
+    "By running `run_private(job)`, the DO1 runs the `syft_flwr` client code that trains the model received from the aggregator on their private data and then sends the updated model back to the aggregator. This happens for multiple rounds\n",
     "\n",
-    "Video(\"../images/flTraining.mp4\", embed=True)"
+    "<video width=\"90%\" controls>\n",
+    "  <source src=\"../images/flTraining.mp4\" type=\"video/mp4\">\n",
+    "  Your browser does not support the video tag.\n",
+    "</video>"
    ]
   },
   {
@@ -189,6 +185,13 @@
    "source": [
     "res_job = do2.run_private(job)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
