--- a/notebooks/fl-diabetes-prediction/local/ds.ipynb
+++ b/notebooks/fl-diabetes-prediction/local/ds.ipynb
@@ -6,21 +6,16 @@
    "source": [
     "# Data Scientist (DS)\n",
     "\n",
-    "Outline:  \n",
+    "Outline of what the DS will do\n",
     "\n",
-    "1.  \n",
-    "2.  \n",
-    "3.  \n",
-    "4.  \n",
-    "5.  \n",
-    "6.  \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Some paths and constants "
+    "1. DS logs into DO1 and DO2's datasites as guest  \n",
+    "2. DS explores the datasets  \n",
+    "3. DS prepares syft_flwr code  \n",
+    "4. DS bootstraps the syft_flwr project  \n",
+    "5. DS runs flwr and syft_flwr simulations (optional)   \n",
+    "6. DS submits jobs to the DOs' datasites  \n",
+    "7. DS starts the FL server code  \n",
+    "8. DS Observes the Results"
    ]
   },
   {
@@ -129,7 +124,10 @@
     "for client in do_clients:\n",
     "    dataset = client.dataset.get(name=SYFTBOX_DATASET_NAME)\n",
     "    mock_paths.append(dataset.get_mock_path())\n",
-    "    print(f\"Client {client.host}'s dataset: \\n{dataset}\\n\")"
+    "    print(\n",
+    "        f\"Client {client.host}'s dataset name: \\n{dataset.name}\\n. Mock path: \\n{dataset.get_mock_path()}\"\n",
+    "    )\n",
+    "    print()"
    ]
   },
   {
@@ -159,7 +157,7 @@
     "\n",
     "A `syft_flwr` project requires minimal changes to a Flower project:\n",
     "\n",
-    "1. Similar to a [Flower project](https://flower.ai/docs/framework/tutorial-quickstart-pytorch.html), a `syft_flwr` project also has the same structure:\n",
+    "1. A `syft_flwr` project has the same structure as a [Flower project](https://flower.ai/docs/framework/tutorial-quickstart-pytorch.html):\n",
     "```\n",
     "<your-project-name>\n",
     "├── <your-project-name>\n",
@@ -208,11 +206,11 @@
    "source": [
     "2. Compared to a Flower project, the DS only needs to change a bit of how the `client_app.py`, which runs on the data owners' datasites, loads the data\n",
     "\n",
-    "<img src=\"../images/client_fn.png\" width=\"70%\" alt=\"client_fn comparison\">\n",
+    "<img src=\"../images/client_fn.png\" width=\"90%\" alt=\"client_fn comparison\">\n",
     "\n",
     "where the `load_syftbox_dataset` (used by `syft_flwr`) and the `load_flwr_data` (used by Flower) differ a bit like below:  \n",
     "\n",
-    "<img src=\"../images/load_syftbox_flwr_dataset.png\" width=\"70%\" alt=\"load datasets comparison\">\n"
+    "<img src=\"../images/load_syftbox_flwr_dataset.png\" width=\"90%\" alt=\"load datasets comparison\">\n"
    ]
   },
   {
@@ -318,15 +316,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# clean up before submitting jobs  (TODO: make it in the backend)\n",
-    "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"fl_diabetes_prediction\" / \"__pycache__\"}\n",
-    "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"simulation_logs\"}\n",
-    "!rm -rf {\"../weights/\"}"
+    "Please look into the dir pointed to by `📝 Log directory` to see the logs of different simulated clients, by default it stays in the `fl_diabetes_prediction/simulation_logs`\n",
+    "\n",
+    "<img src=\"../images/dsSimulationLogs.png\" width=\"24%\" alt=\"DS submits jobs\">"
    ]
   },
   {
@@ -343,6 +338,18 @@
     "The DS submits the code in `fl-diabetes-prediction` to the DO's datasites\n",
     "\n",
     "<img src=\"../images/dsSubmitsJobs.png\" width=\"54%\" alt=\"DS submits jobs\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# clean up before submitting jobs\n",
+    "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"fl_diabetes_prediction\" / \"__pycache__\"}\n",
+    "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"simulation_logs\"}\n",
+    "!rm -rf {\"../weights/\"}"
    ]
   },
   {
@@ -375,18 +382,12 @@
    "source": [
     "## 7. DS starts the FL server code\n",
     "\n",
-    "By running the FL server code, the DS aggregates the models trained on DOs' private local data into an improved global model in multiple rounds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.display import Video\n",
+    "By running the FL server code, the DS aggregates the models trained on DOs' private local data into an improved global model in multiple rounds\n",
     "\n",
-    "Video(\"../images/flTraining.mp4\", embed=True)"
+    "<video width=\"90%\" controls>\n",
+    "  <source src=\"../images/flTraining.mp4\" type=\"video/mp4\">\n",
+    "  Your browser does not support the video tag.\n",
+    "</video>"
    ]
   },
   {
@@ -409,8 +410,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now the DS can monitor the aggregated models trained on DO's private datasets in the `weights` folder"
+    "Now the DS can monitor the aggregated models trained on DO's private datasets in the `weights` folder\n",
+    "\n",
+    "\n",
+    "<img src=\"../images/dsAggregatedWeights.png\" width=\"35%\" alt=\"DS weights\">"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
