--- a/notebooks/fl-diabetes-prediction/distributed/do1.ipynb
+++ b/notebooks/fl-diabetes-prediction/distributed/do1.ipynb
@@ -6,51 +6,28 @@
    "source": [
     "# Data Owner 01\n",
     "\n",
-    "TODO: outline of the steps  \n",
-    "1.  \n",
-    "2.  \n",
-    "3.  "
+    "Outline of what DO1 will do\n",
+    "\n",
+    "0. Run the `syftbox client` in a terminal (or the SyftBox UI app), and the `syft-rds server`\n",
+    "1. DO logs into the datasite as an admin\n",
+    "2. DO creates a Syft dataset \n",
+    "3. DO reviews and run jobs submitted by data scientists on DO's private data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Change `LOCAL_TEST` to `True` if you want to run the clients locally to test.   "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## 0. DO runs the `syftbox client` in a terminal or the SyftBox UI app \n",
+    "The CLI syftbox client can be installed with a single command: `curl -fsSL https://syftbox.net/install.sh | sh`. The SyftUI app can be installed from `https://www.syftbox.net/`:\n",
     "\n",
-    "With `LOCAL_TEST = False`, please have your syftbox client running. You can follow the installation instructions here https://www.syftbox.net/, or you can simply do\n",
-    "```\n",
-    "curl -fsSL https://syftbox.net/install.sh | sh\n",
-    "```\n",
-    "to install SyftBox's CLI version."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "LOCAL_TEST = True\n",
+    "<img src=\"../images/syftboxnet.png\" width=\"40%\" alt=\"syftbox.net\">\n",
     "\n",
-    "import os\n",
+    "This will set up a SyftBox directory, where by default, it's under the `~/SyftBox` folder \n",
     "\n",
-    "if LOCAL_TEST:\n",
-    "    os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(do_stack.client.config_path)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "With `LOCAL_TEST = False`, please run an `syft-rds server` in a separate terminal for this workflow:\n",
+    "<img src=\"../images/SyftBoxNetwork.png\" width=\"20%\" alt=\"SyftBox network\">\n",
     "\n",
+    "Run the `syft-rds` server in a terminal with:\n",
     "```bash\n",
     "uv run syft-rds server\n",
     "```"
@@ -60,41 +37,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## DO logs in to datasite "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path\n",
-    "\n",
-    "if LOCAL_TEST:\n",
-    "    from syft_rds.orchestra import remove_rds_stack_dir, setup_rds_server\n",
-    "\n",
-    "    remove_rds_stack_dir(root_dir=Path(\".\"), key=\"flwr\")\n",
-    "\n",
-    "    DO_EMAIL = \"do1@openmined.org\"\n",
-    "    do_stack = setup_rds_server(email=DO_EMAIL, root_dir=Path(\".\"), key=\"flwr\")\n",
-    "    do_client = do_stack.init_session(host=DO_EMAIL)\n",
-    "else:\n",
-    "    import syft_rds as sy\n",
-    "    from syft_core import Client\n",
-    "\n",
-    "    DO_EMAIL = Client.load().email\n",
-    "    print(\"DO email: \", DO_EMAIL)\n",
-    "\n",
-    "    do_client = sy.init_session(host=DO_EMAIL)"
+    "## 1. DO logs into the datasite as admin"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Upload dataset (skip if it's already uploaded)\n",
-    "TODO: put an image showing the uploading private / mock (synthetic) where mock goes to the SyftBox network, and private stays local"
+    "<img src=\"../images/do1LogsInSyftBoxDatasite.png\" width=\"680%\" alt=\"DO1 logs into SyftBox datasite\">"
    ]
   },
   {
@@ -103,17 +53,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from huggingface_hub import snapshot_download\n",
+    "import syft_rds as sy\n",
+    "from loguru import logger\n",
+    "from syft_core import Client\n",
     "\n",
-    "DATASET_DIR = Path(\"./dataset/\").expanduser().absolute()\n",
+    "do1_email = Client.load().email\n",
+    "logger.info(f\"DO1 email: {do1_email}\")\n",
+    "do1 = sy.init_session(host=do1_email)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "do1.is_admin"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. DO1 creates a dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, DO1 prepares a diabetes dataset with mock (fake / synthetic) part and real, private part  \n",
     "\n",
-    "if not DATASET_DIR.exists():\n",
-    "    snapshot_download(\n",
-    "        repo_id=\"khoaguin/pima-indians-diabetes-database-partitions\",\n",
-    "        repo_type=\"dataset\",\n",
-    "        local_dir=\"./dataset/\",\n",
-    "        local_dir_use_symlinks=False,  # Set to False to copy files instead of symlinking\n",
-    "    )"
+    "<img src=\"../images/datasetPartition0.png\" width=\"30%\" alt=\"partitioned dataset 0\">"
    ]
   },
   {
@@ -124,15 +95,43 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "partition_number = 0  # please change this to any number from 0 to 4\n",
-    "DATASET_PATH = Path(f\"./dataset/pima-indians-diabetes-database-{partition_number}\")\n",
+    "from huggingface_hub import snapshot_download\n",
     "\n",
-    "dataset = do_client.dataset.create(\n",
+    "DATASET_DIR = Path(\"../dataset/\").expanduser().absolute()\n",
+    "\n",
+    "if not DATASET_DIR.exists():\n",
+    "    snapshot_download(\n",
+    "        repo_id=\"khoaguin/pima-indians-diabetes-database-partitions\",\n",
+    "        repo_type=\"dataset\",\n",
+    "        local_dir=DATASET_DIR,\n",
+    "    )\n",
+    "\n",
+    "partition_number = 0\n",
+    "DATASET_PATH = DATASET_DIR / f\"pima-indians-diabetes-database-{partition_number}\"\n",
+    "DATASET_PATH"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DO1 creates a syft dataset, where the **mock part is uploaded to the datasite and is public** to the SyftBox network, and **the private part always stays local (never get shared)**\n",
+    "\n",
+    "\n",
+    "<img src=\"../images/do1CreatesSyftDataset.png\" width=\"55%\" alt=\"partitioned dataset\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = do1.dataset.create(\n",
     "    name=\"pima-indians-diabetes-database\",\n",
-    "    summary=\"Pima Indians Diabetes Database.\",\n",
-    "    description_path=DATASET_PATH / \"README.md\",\n",
     "    path=DATASET_PATH / \"private\",\n",
     "    mock_path=DATASET_PATH / \"mock\",\n",
+    "    description_path=DATASET_PATH / \"README.md\",\n",
     ")\n",
     "dataset.describe()"
    ]
@@ -141,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./images/doWaitsForJobs.png\" width=\"40%\" alt=\"DO waits for jobs\">"
+    "<img src=\"../images/doWaitsForJobs.png\" width=\"40%\" alt=\"do waiting for jobs\">"
    ]
   },
   {
@@ -155,9 +154,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By running the job privately, the DO trains the model on their local data, and then sends the trained model back to the DS\n",
+    "After the DS submits a job, the DO sees that it has appeared on their datasite, and can review it\n",
     "\n",
-    "<img src=\"./images/doSendModels.png\" width=\"80%\" alt=\"DS Sends Models\">"
+    "<img src=\"../images/do1ReviewsJob.png\" width=\"60%\" alt=\"do waiting for jobs\">"
    ]
   },
   {
@@ -166,16 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jobs = do_client.jobs.get_all(status=\"pending_code_review\")\n",
-    "jobs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "jobs = do1.jobs.get_all(status=\"pending_code_review\")\n",
     "job = jobs[-1]\n",
     "job"
    ]
@@ -191,12 +181,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By running `run_private(job)`, the DO1 runs the `syft_flwr` client code that trains the model received from the aggregator on their private data and then sends the updated model back to the aggregator. This happens for multiple rounds\n",
+    "\n",
+    "<video width=\"90%\" controls>\n",
+    "  <source src=\"../images/flTraining.mp4\" type=\"video/mp4\">\n",
+    "  Your browser does not support the video tag.\n",
+    "</video>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_job = do_client.run_private(job)"
+    "res_job = do1.run_private(job)"
    ]
   },
   {
@@ -223,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
