--- a/notebooks/fl-diabetes-prediction/distributed/do2.ipynb
+++ b/notebooks/fl-diabetes-prediction/distributed/do2.ipynb
@@ -6,16 +6,45 @@
    "source": [
     "# Data Owner 02\n",
     "\n",
+    "Outline of what DO2 will do\n",
+    "\n",
+    "0. Run the `syftbox client` in a terminal or the SyftBox UI app\n",
     "1. DO logs into the datasite as an admin\n",
-    "2. DO creates the dataset \n",
-    "3. DO reviews and run jobs submitted by data scientists"
+    "2. DO creates a Syft dataset \n",
+    "3. DO reviews and run jobs submitted by data scientists on DO's private data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. DO2 logs in to datasite "
+    "## 0. DO runs the `syftbox client` in a terminal or the SyftBox UI app \n",
+    "The CLI syftbox client can be installed with a single command: `curl -fsSL https://syftbox.net/install.sh | sh`. The SyftUI app can be installed from `https://www.syftbox.net/`:\n",
+    "\n",
+    "<img src=\"../images/syftboxnet.png\" width=\"40%\" alt=\"syftbox.net\">\n",
+    "\n",
+    "This will set up a SyftBox directory, where by default, it's under the `~/SyftBox` folder \n",
+    "\n",
+    "<img src=\"../images/SyftBoxNetwork.png\" width=\"20%\" alt=\"SyftBox network\">\n",
+    "\n",
+    "Run the `syft-rds` server in a terminal with:\n",
+    "```bash\n",
+    "uv run syft-rds server\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. DO2 logs into the datasite as admin"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"../images/do2LogsInSyftBoxDatasite.png\" width=\"680%\" alt=\"DO1 logs into SyftBox datasite\">"
    ]
   },
   {
@@ -24,22 +53,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
+    "import syft_rds as sy\n",
+    "from loguru import logger\n",
+    "from syft_core import Client\n",
     "\n",
-    "if LOCAL_TEST:\n",
-    "    from syft_rds.orchestra import setup_rds_server\n",
-    "\n",
-    "    DO_EMAIL = \"do2@openmined.org\"\n",
-    "    do_stack = setup_rds_server(email=DO_EMAIL, root_dir=Path(\".\"), key=\"flwr\")\n",
-    "    do_client = do_stack.init_session(host=DO_EMAIL)\n",
-    "else:\n",
-    "    import syft_rds as sy\n",
-    "    from syft_core import Client\n",
-    "\n",
-    "    DO_EMAIL = Client.load().email\n",
-    "    print(\"DO email: \", DO_EMAIL)\n",
-    "\n",
-    "    do_client = sy.init_session(host=DO_EMAIL)"
+    "do2_email = Client.load().email\n",
+    "logger.info(f\"DO2 email: {do2_email}\")\n",
+    "do2 = sy.init_session(host=do2_email)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "do2.is_admin"
    ]
   },
   {
@@ -50,22 +79,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from huggingface_hub import snapshot_download\n",
+    "DO2 also prepares its diabetes dataset with mock (fake / synthetic) part and real, private part  \n",
     "\n",
-    "DATASET_DIR = Path(\"./dataset/\").expanduser().absolute()\n",
-    "\n",
-    "if not DATASET_DIR.exists():\n",
-    "    snapshot_download(\n",
-    "        repo_id=\"khoaguin/pima-indians-diabetes-database-partitions\",\n",
-    "        repo_type=\"dataset\",\n",
-    "        local_dir=\"./dataset/\",\n",
-    "        local_dir_use_symlinks=False,  # Set to False to copy files instead of symlinking\n",
-    "    )"
+    "<img src=\"../images/datasetPartition1.png\" width=\"30%\" alt=\"partitioned dataset 1\">"
    ]
   },
   {
@@ -76,15 +95,42 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "partition_number = 0  # please change this to any number from 0 to 4\n",
-    "DATASET_PATH = Path(f\"./dataset/pima-indians-diabetes-database-{partition_number}\")\n",
+    "from huggingface_hub import snapshot_download\n",
     "\n",
-    "dataset = do_client.dataset.create(\n",
+    "DATASET_DIR = Path(\"../dataset/\").expanduser().absolute()\n",
+    "\n",
+    "if not DATASET_DIR.exists():\n",
+    "    snapshot_download(\n",
+    "        repo_id=\"khoaguin/pima-indians-diabetes-database-partitions\",\n",
+    "        repo_type=\"dataset\",\n",
+    "        local_dir=DATASET_DIR,\n",
+    "    )\n",
+    "\n",
+    "partition_number = 1\n",
+    "DATASET_PATH = DATASET_DIR / f\"pima-indians-diabetes-database-{partition_number}\"\n",
+    "DATASET_PATH"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DO2 also creates a syft dataset, where the **mock part is uploaded to the datasite** and is public to the SyftBox network, and **the private part always stays local (never get shared)**\n",
+    "\n",
+    "<img src=\"../images/do2CreatesSyftADataset.png\" width=\"55%\" alt=\"do2 creates a syft dataset\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = do2.dataset.create(\n",
     "    name=\"pima-indians-diabetes-database\",\n",
-    "    summary=\"Pima Indians Diabetes Database.\",\n",
-    "    description_path=DATASET_PATH / \"README.md\",\n",
     "    path=DATASET_PATH / \"private\",\n",
     "    mock_path=DATASET_PATH / \"mock\",\n",
+    "    description_path=DATASET_PATH / \"README.md\",\n",
     ")\n",
     "dataset.describe()"
    ]
@@ -93,14 +139,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./images/doWaitsForJobs.png\" width=\"40%\" alt=\"DO waits for jobs\">"
+    "<img src=\"../images/doWaitsForJobs.png\" width=\"40%\" alt=\"do waiting for jobs\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. DO2 reviews and runs jobs on private data"
+    "## Review and Run Jobs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After the DS submits a job, the DO2 will also see that there is one job from the DS \n",
+    "\n",
+    "<img src=\"../images/do2ReviewsJob.png\" width=\"60%\" alt=\"do waiting for jobs\">"
    ]
   },
   {
@@ -109,16 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jobs = do_client.jobs.get_all(status=\"pending_code_review\")\n",
-    "jobs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "jobs = do2.jobs.get_all(status=\"pending_code_review\")\n",
     "job = jobs[-1]\n",
     "job"
    ]
@@ -134,26 +180,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By running `run_private(job)`, the DO1 runs the `syft_flwr` client code that trains the model received from the aggregator on their private data and then sends the updated model back to the aggregator. This happens for multiple rounds\n",
+    "\n",
+    "<video width=\"90%\" controls>\n",
+    "  <source src=\"../images/flTraining.mp4\" type=\"video/mp4\">\n",
+    "  Your browser does not support the video tag.\n",
+    "</video>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
-    "if LOCAL_TEST:\n",
-    "    os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(do_stack.client.config_path)\n",
-    "\n",
-    "res_job = do_client.run_private(job)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "By running the job privately, the DO trains the model on their local data, and then sends the trained model back to the DS\n",
-    "\n",
-    "<img src=\"./images/doSendModels.png\" width=\"80%\" alt=\"DS Sends Models\">"
+    "res_job = do2.run_private(job)"
    ]
   },
   {
@@ -180,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
