--- a/notebooks/fl-diabetes-prediction/distributed/ds.ipynb
+++ b/notebooks/fl-diabetes-prediction/distributed/ds.ipynb
@@ -6,24 +6,43 @@
    "source": [
     "# Data Scientist (DS)\n",
     "\n",
-    "Outline:\n",
-    "1.  \n",
-    "2.  \n",
-    "3.  \n",
-    "4.  \n"
+    "Outline of what the DS will do\n",
+    "\n",
+    "0. DS runs the SyftBox client CLI tool or the SyftBox UI app\n",
+    "1. DS logs into DO1 and DO2's datasites as guest  \n",
+    "2. DS explores the datasets  \n",
+    "3. DS prepares syft_flwr code  \n",
+    "4. DS bootstraps the syft_flwr project  \n",
+    "5. DS runs flwr and syft_flwr simulations (optional)   \n",
+    "6. DS submits jobs to the DOs' datasites  \n",
+    "7. DS starts the FL server code  \n",
+    "8. DS Observes the Results"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Change `LOCAL_TEST` to `True` if you want to run the clients locally to test.   \n",
+    "## 0. DO runs the `syftbox client` in a terminal or the SyftBox UI app \n",
+    "The CLI syftbox client can be installed with a single command: `curl -fsSL https://syftbox.net/install.sh | sh`. The SyftUI app can be installed from `https://www.syftbox.net/`:\n",
     "\n",
-    "With `LOCAL_TEST = False`, please have your syftbox client running. You can follow the installation instructions here https://www.syftbox.net/, or you can simply do\n",
-    "```\n",
-    "curl -fsSL https://syftbox.net/install.sh | sh\n",
-    "```\n",
-    "to install SyftBox's CLI version."
+    "<img src=\"../images/syftboxnet.png\" width=\"40%\" alt=\"syftbox.net\">\n",
+    "\n",
+    "This will set up a SyftBox directory, where by default, it's under the `~/SyftBox` folder \n",
+    "\n",
+    "<img src=\"../images/SyftBoxNetwork.png\" width=\"20%\" alt=\"SyftBox network\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. DS logs into DO1 and DO2's datasites as guest\n",
+    "\n",
+    "\n",
+    "DO will also have their own datasite where they can log in as an admin, but it's not needed in this workflow\n",
+    "\n",
+    "<img src=\"../images/dsLogsInAsGuests.png\" width=\"53%\" alt=\"DS logs into DOs' datasites as guests\">"
    ]
   },
   {
@@ -32,14 +51,148 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LOCAL_TEST = True"
+    "import syft_rds as sy\n",
+    "from loguru import logger\n",
+    "from syft_core import Client\n",
+    "\n",
+    "DS = Client.load().email\n",
+    "logger.info(f\"DS's email: {DS}\")\n",
+    "\n",
+    "DO1 = \"flower-test-group-1@openmined.org\"\n",
+    "DO2 = \"flower-test-group-2@openmined.org\"\n",
+    "do1_guest = sy.init_session(host=DO1)\n",
+    "do2_guest = sy.init_session(host=DO2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "do1_guest.is_admin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "do2_guest.is_admin"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some paths and constants "
+    "Set some constants and variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "SYFTBOX_DATASET_NAME = \"pima-indians-diabetes-database\"\n",
+    "\n",
+    "os.environ[\"LOGURU_LEVEL\"] = \"DEBUG\"\n",
+    "os.environ[\"SYFT_FLWR_MSG_TIMEOUT\"] = \"60\"\n",
+    "\n",
+    "do_clients = [do1_guest, do2_guest]\n",
+    "do_emails = [DO1, DO2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. DS explores the datasets\n",
+    "\n",
+    "DS can access the DOs' mock data, but can't access the private data\n",
+    "\n",
+    "<img src=\"../images/dsExploresDOsDatasets.png\" width=\"70%\" alt=\"DS explores datasets\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SYFTBOX_DATASET_NAME\n",
+    "\n",
+    "mock_paths = []\n",
+    "for client in do_clients:\n",
+    "    dataset = client.dataset.get(name=SYFTBOX_DATASET_NAME)\n",
+    "    mock_paths.append(dataset.get_mock_path())\n",
+    "    print(\n",
+    "        f\"Client {client.host}'s dataset name: \\n{dataset.name}\\n. Mock path: \\n{dataset.get_mock_path()}\"\n",
+    "    )\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check that the DS can't access the private datasets, even with local test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    dataset.get_private_path()\n",
+    "except Exception as e:\n",
+    "    logger.error(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. DS prepares `syft_flwr` code\n",
+    "\n",
+    "A `syft_flwr` project requires minimal changes to a Flower project:\n",
+    "\n",
+    "1. A `syft_flwr` project has the same structure as a [Flower project](https://flower.ai/docs/framework/tutorial-quickstart-pytorch.html):\n",
+    "```\n",
+    "<your-project-name>\n",
+    "├── <your-project-name>\n",
+    "│   ├── __init__.py\n",
+    "│   ├── client_app.py   # Defines your ClientApp\n",
+    "│   ├── server_app.py   # Defines your ServerApp\n",
+    "│   └── task.py         # Defines your model, training and data loading\n",
+    "├── pyproject.toml      # Project metadata like dependencies and configs\n",
+    "└── README.md\n",
+    "``` "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Concretely, for diabetes prediction, we have the project code under the path `../fl-diabetes-prediction`\n",
+    "\n",
+    "\n",
+    "<img src=\"../images/dsPreparesSyftFlwrProject.png\" width=\"30%\" alt=\"DS explores datasets\">\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where the DS will run the `ServerApp` (defined in `server_app.py`), and the `ClientApp` (in `client_app.py`)\n",
+    "\n",
+    "<img src=\"../images/dsSyftFlwrProjectArch.png\" width=\"70%\" alt=\"Your second image description\">\n"
    ]
   },
   {
@@ -50,121 +203,43 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "SYFTBOX_DATASET_NAME = \"pima-indians-diabetes-database\"\n",
-    "\n",
-    "import os\n",
-    "\n",
-    "if LOCAL_TEST:\n",
-    "    os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(ds_stack.client.config_path)\n",
-    "\n",
-    "os.environ[\"LOGURU_LEVEL\"] = \"DEBUG\"\n",
-    "os.environ[\"SYFT_FLWR_MSG_TIMEOUT\"] = \"60\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Log into the data owners' datasites\n",
-    "\n",
-    "TODO: put an image  \n",
-    "TODO: split into 2 sets of notebooks (local only and distributed only)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if LOCAL_TEST:\n",
-    "    from syft_rds.orchestra import setup_rds_server\n",
-    "\n",
-    "    print(\"Running locally!\")\n",
-    "\n",
-    "    DS = \"ds@openmined.org\"\n",
-    "    print(\"DS email: \", DS)\n",
-    "\n",
-    "    DO1 = \"do1@openmined.org\"\n",
-    "    DO2 = \"do2@openmined.org\"\n",
-    "\n",
-    "    ds_stack = setup_rds_server(email=DS, key=\"flwr\", root_dir=Path(\".\"))\n",
-    "    do_client_1 = ds_stack.init_session(host=DO1)\n",
-    "    do_client_2 = ds_stack.init_session(host=DO2)\n",
-    "else:\n",
-    "    import syft_rds as sy\n",
-    "    from syft_core import Client\n",
-    "\n",
-    "    DS = Client.load().email\n",
-    "    print(\"DS email: \", DS)\n",
-    "\n",
-    "    DO1 = \"flower-test-group-1@openmined.org\"\n",
-    "    DO2 = \"flower-test-group-2@openmined.org\"\n",
-    "\n",
-    "    do_client_1 = sy.init_session(host=DO1)\n",
-    "    print(\"Logged into: \", do_client_1.host)\n",
-    "\n",
-    "    do_client_2 = sy.init_session(host=DO2)\n",
-    "    print(\"Logged into: \", do_client_2.host)\n",
-    "\n",
-    "do_clients = [do_client_1, do_client_2]\n",
-    "do_emails = [DO1, DO2]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Explore the datasets\n",
-    "\n",
-    "TODO: demonstrate we can't access private data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SYFTBOX_DATASET_NAME"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mock_paths = []\n",
-    "for client in do_clients:\n",
-    "    dataset = client.dataset.get(name=SYFTBOX_DATASET_NAME)\n",
-    "    mock_paths.append(dataset.get_mock_path())\n",
-    "    print(f\"Client {client.host}'s dataset: \\n{dataset}\\n\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Bootstrapping  (creates `main.py` and apend some info into `pyproject.toml`) and run `syft_flwr` simulation\n",
-    "\n",
-    "TODO: What does it mean to \"bootstrap\"?  \n",
-    "- What does it do?\n",
-    "- Why do we do it? (what's the role of `main.py` and what's the info being added to the toml file does?)\n",
-    "\n",
-    "TODO: Image of Flower code before and after bootstrap \n",
-    "\n",
-    "TODO: Explain a difference of Flower and syft_flwr projects (what code need to be modified) via an image (don't open the code files) - show git diff"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SYFT_FLWR_PROJECT_PATH = Path(\"./fl-diabetes-prediction\")\n",
+    "SYFT_FLWR_PROJECT_PATH = Path(\"../fl-diabetes-prediction\")\n",
     "assert SYFT_FLWR_PROJECT_PATH.exists()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Compared to a Flower project, the DS only needs to change a bit of how the `client_app.py`, which runs on the data owners' datasites, loads the data\n",
+    "\n",
+    "<img src=\"../images/client_fn.png\" width=\"90%\" alt=\"client_fn comparison\">\n",
+    "\n",
+    "where the `load_syftbox_dataset` (used by `syft_flwr`) and the `load_flwr_data` (used by Flower) differ a bit like below:  \n",
+    "\n",
+    "<img src=\"../images/load_syftbox_flwr_dataset.png\" width=\"90%\" alt=\"load datasets comparison\">\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. DS bootstraps the `syft_flwr` project\n",
+    "\n",
+    "After the DS has prepared the `syft_flwr` project code, they can run the `syft_flwr.bootstrap` command to modify the project's metadata in `pyproject.toml` that specifies the unique name of the FL run, who are the data owners and who is the aggregator\n",
+    "```\n",
+    "[tool.syft_flwr]\n",
+    "app_name = \"ds@openmined.org_fl-diabetes-prediction_1753435643\"\n",
+    "datasites = [\n",
+    "    \"do1@openmined.org\",\n",
+    "    \"do2@openmined.org\",\n",
+    "]\n",
+    "aggregator = \"ds@openmined.org\"\n",
+    "```\n",
+    "and creates the `main.py` to specifies who runs what based on the new metatdata information\n",
+    "\n",
+    "\n",
+    "<img src=\"../images/dsBootstrapping.png\" width=\"50%\" alt=\"Your second image description\">\n"
    ]
   },
   {
@@ -187,9 +262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run `flwr` and `syft_flwr` simulations (optional)\n",
-    "\n",
-    "TODO: it's against mock data, since DS only has acccess to DOs' mock data locally, and to test the code runs before submitting"
+    "## 5. DS runs `flwr` and `syft_flwr` simulations (optional)"
    ]
   },
   {
@@ -199,6 +272,13 @@
    "outputs": [],
    "source": [
     "RUN_SIMULATION = True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First we run normal Flower simulation with `flwr run`"
    ]
   },
   {
@@ -219,16 +299,16 @@
    "source": [
     "# clean up\n",
     "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"fl_diabetes_prediction\" / \"__pycache__\"}  # clean before submitting\n",
-    "!rm -rf weights/  # "
+    "!rm -rf {\"../weights/\"}"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "mock_paths"
+    "Now the DS can run `syft_flwr` simulation on DO's mock data by launching 2 threads that run DOs code and a thread that runs the DS code \n",
+    "\n",
+    "<img src=\"../images/dsRunsSyftFLWRSimulation.png\" width=\"50%\" alt=\"client_fn comparison\">"
    ]
   },
   {
@@ -246,14 +326,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Submit jobs"
+    "Please look into the dir pointed to by `📝 Log directory` to see the logs of different simulated clients, by default it stays in the `fl_diabetes_prediction/simulation_logs`\n",
+    "\n",
+    "<img src=\"../images/dsSimulationLogs.png\" width=\"24%\" alt=\"DS submits jobs\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./images/dsSendsJobs.png\" width=\"80%\" alt=\"DS Submits Jobs\">"
+    "## 6. DS submits jobs to the DOs' datasites"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The DS submits the code in `fl-diabetes-prediction` to the DO's datasites\n",
+    "\n",
+    "<img src=\"../images/dsSubmitsJobs.png\" width=\"54%\" alt=\"DS submits jobs\">"
    ]
   },
   {
@@ -262,10 +353,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# clean up before submitting jobs  (TODO: make it in the backend)\n",
+    "# clean up before submitting jobs\n",
     "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"fl_diabetes_prediction\" / \"__pycache__\"}\n",
     "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"simulation_logs\"}\n",
-    "!rm -rf weights/"
+    "!rm -rf {\"../weights/\"}"
    ]
   },
   {
@@ -277,11 +368,10 @@
     "for client in do_clients:\n",
     "    print(f\"sending job to {client.host}\")\n",
     "    job = client.jobs.submit(\n",
-    "        name=\"Syft Flower Experiment\",\n",
+    "        name=\"fl-diabetes-prediction\",\n",
     "        user_code_path=SYFT_FLWR_PROJECT_PATH,\n",
     "        dataset_name=SYFTBOX_DATASET_NAME,\n",
     "        entrypoint=\"main.py\",\n",
-    "        description=\"Syft Flower Federated Learning Experiment\",\n",
     "    )\n",
     "    print(job)"
    ]
@@ -290,16 +380,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./images/dsDoneSubmittingJobs.png\" width=\"40%\" alt=\"DS waits for jobs to be approved\">"
+    "<img src=\"../images/dsWaitsForJobsToBeApproved.png\" width=\"35%\" alt=\"DS waits for jobs to be approved\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## DS starts the FL server code\n",
+    "## 7. DS starts the FL server code\n",
     "\n",
-    "TODO: having a GIF to demonstrate the long-running jobs that's exchanging the models between the clients and server"
+    "By running the FL server code, the DS aggregates the models trained on DOs' private local data into an improved global model in multiple rounds\n",
+    "\n",
+    "<video width=\"90%\" controls>\n",
+    "  <source src=\"../images/flTraining.mp4\" type=\"video/mp4\">\n",
+    "  Your browser does not support the video tag.\n",
+    "</video>"
    ]
   },
   {
@@ -312,36 +407,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# TODO: Change syntax to `ds_client.run(job)`"
+    "## 8. DS Observes the Results"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By running the FL server code, the DS aggregates the models trained on DOs' private local data into an improved global model\n",
+    "Now the DS can monitor the aggregated models trained on DO's private datasets in the `weights` folder\n",
     "\n",
-    "<img src=\"./images/dsAggregateModels.png\" width=\"30%\" alt=\"DS Aggregates Models\">"
+    "\n",
+    "<img src=\"../images/dsAggregatedWeights.png\" width=\"35%\" alt=\"DS weights\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## DS Observes the Results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now the DS can monitor the aggregated models trained no DO's private datasets in the `weights` folder"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -360,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
