--- a/notebooks/fl-diabetes-prediction/distributed/do2.ipynb
+++ b/notebooks/fl-diabetes-prediction/distributed/do2.ipynb
@@ -126,13 +126,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = do2.dataset.create(\n",
-    "    name=\"pima-indians-diabetes-database\",\n",
-    "    path=DATASET_PATH / \"private\",\n",
-    "    mock_path=DATASET_PATH / \"mock\",\n",
-    "    description_path=DATASET_PATH / \"README.md\",\n",
-    ")\n",
-    "dataset.describe()"
+    "try:\n",
+    "    dataset = do2.dataset.create(\n",
+    "        name=\"pima-indians-diabetes-database\",\n",
+    "        path=DATASET_PATH / \"private\",\n",
+    "        mock_path=DATASET_PATH / \"mock\",\n",
+    "        description_path=DATASET_PATH / \"README.md\",\n",
+    "    )\n",
+    "    dataset.describe()\n",
+    "except ValueError as e:\n",
+    "    logger.error(f\"Dataset already exists: {e}\")\n",
+    "    dataset = do2.dataset.get(name=\"pima-indians-diabetes-database\")\n",
+    "    dataset.describe()\n",
+    "except Exception as e:\n",
+    "    logger.error(f\"An unexpected error occurred: {e}\")"
    ]
   },
   {
@@ -164,8 +171,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jobs = do2.jobs.get_all(status=\"pending_code_review\")\n",
-    "job = jobs[-1]\n",
+    "jobs = do2.job.get_all(status=\"pending_code_review\")\n",
+    "jobs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "job = jobs[0]\n",
     "job"
    ]
   },
