--- a/notebooks/fl-diabetes-prediction/local/do2.ipynb
+++ b/notebooks/fl-diabetes-prediction/local/do2.ipynb
@@ -150,8 +150,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jobs = do2.jobs.get_all(status=\"pending_code_review\")\n",
-    "job = jobs[-1]\n",
+    "jobs = do2.job.get_all(status=\"pending_code_review\")\n",
+    "jobs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "job = jobs[0]\n",
     "job"
    ]
   },
