polishing local notebooks for fa

--- a/notebooks/federated-analytics-diabetes/local/ds.ipynb
+++ b/notebooks/federated-analytics-diabetes/local/ds.ipynb
@@ -176,7 +176,7 @@
     "\n",
     "Concretely, for diabetes prediction, we have the project code under the path `../fed-analytics-diabetes`\n",
     "\n",
-    "<img src=\"../images/dsPreparesSyftFlwrProject.png\" width=\"28%\" alt=\"DS prepares code\">\n"
+    "<img src=\"../images/dsPreparesSyftFlwrProject.png\" width=\"20%\" alt=\"DS prepares code\">\n"
    ]
   },
   {
@@ -312,7 +312,15 @@
    "source": [
     "Please look into the dir pointed to by `📝 Log directory` to see the logs of different simulated clients, by default it stays in the `fed-analytics-diabetes/simulation_logs`\n",
     "\n",
-    "<img src=\"../images/dsSimulationLogs.png\" width=\"20%\" alt=\"DS simulation logs folder\">"
+    "<img src=\"../images/dsSimulationLogs.png\" width=\"20%\" alt=\"DS simulation logs folder\">\n",
+    "\n",
+    "We will also see that the aggregated historgrams are saved under `figures/` dir \n",
+    "\n",
+    "<img src=\"../images/dsAggregatedFiguresFolder.png\" width=\"20%\" alt=\"DS aggregated figures folder\">\n",
+    "\n",
+    "However, since running simulation is done on mock data, the local frequency is very low (only 7 as maximum for age)\n",
+    "\n",
+    "<img src=\"../images/dsLocalFrequencyMock.png\" width=\"50%\" alt=\"local frequency mock data\">"
    ]
   },
   {
@@ -340,7 +348,7 @@
     "# clean up before submitting jobs\n",
     "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"fl_diabetes_prediction\" / \"__pycache__\"}\n",
     "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"simulation_logs\"}\n",
-    "!rm -rf {\"../weights/\"}"
+    "!rm -rf {\"./figures/\"}"
    ]
   },
   {
@@ -401,10 +409,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now the DS can monitor the aggregated models trained on DO's private datasets in the `weights` folder\n",
+    "Now the DS can monitor the aggregated figures trained on DO's private datasets in the `figures` folder\n",
     "\n",
+    "<img src=\"../images/dsAggregatedFiguresFolder.png\" width=\"20%\" alt=\"DS aggregated figures folder\">\n",
     "\n",
-    "<img src=\"../images/dsAggregatedWeights.png\" width=\"35%\" alt=\"DS weights\">"
+    "Now, the local frequency when running job on private data is much higher compared to running simulation on mock data\n",
+    "\n",
+    "<img src=\"../images/dsLocalFrequencyReal.png\" width=\"50%\" alt=\"DS aggregated frequency real\">"
    ]
   },
   {
