Refactor federated analytics notebooks and update README for clarity

--- a/notebooks/federated-analytics-diabetes/distributed/ds.ipynb
+++ b/notebooks/federated-analytics-diabetes/distributed/ds.ipynb
@@ -8,6 +8,7 @@
     "\n",
     "Outline of what the DS will do\n",
     "\n",
+    "0. DS runs the SyftBox client CLI tool or the SyftBox UI app\n",
     "1. DS logs into DO1 and DO2's datasites as guest  \n",
     "2. DS explores the datasets  \n",
     "3. DS prepares syft_flwr code  \n",
@@ -22,12 +23,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 0. DO runs the `syftbox client` in a terminal or the SyftBox UI app \n",
+    "The CLI syftbox client can be installed with a single command: `curl -fsSL https://syftbox.net/install.sh | sh`. The SyftUI app can be installed from `https://www.syftbox.net/`:\n",
+    "\n",
+    "<img src=\"../images/syftboxnet.png\" width=\"40%\" alt=\"syftbox.net\">\n",
+    "\n",
+    "This will set up a SyftBox directory, where by default, it's under the `~/SyftBox` folder \n",
+    "\n",
+    "<img src=\"../images/SyftBoxNetwork.png\" width=\"20%\" alt=\"SyftBox network\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1. DS logs into DO1 and DO2's datasites as guest\n",
     "\n",
     "\n",
     "DO will also have their own datasite where they can log in as an admin, but it's not needed in this workflow\n",
     "\n",
-    "<img src=\"../images/dsLogsInAsGuests.png\" width=\"55%\" alt=\"DS logs into DOs' datasites as guests\">"
+    "<img src=\"../images/dsLogsInAsGuests.png\" width=\"53%\" alt=\"DS logs into DOs' datasites as guests\">"
    ]
   },
   {
@@ -36,28 +51,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from pathlib import Path\n",
-    "\n",
+    "import syft_rds as sy\n",
     "from loguru import logger\n",
-    "from syft_rds.orchestra import setup_rds_server\n",
+    "from syft_core import Client\n",
     "\n",
-    "DS = \"ds@openmined.org\"\n",
-    "DO1 = \"do1@openmined.org\"\n",
-    "DO2 = \"do2@openmined.org\"\n",
+    "DS = Client.load().email\n",
+    "logger.info(f\"DS's email: {DS}\")\n",
     "\n",
-    "ds_stack = setup_rds_server(email=DS, root_dir=Path(\".\"), key=\"local_syftbox_network\")\n",
-    "do1_guest = ds_stack.init_session(host=DO1)\n",
-    "do2_guest = ds_stack.init_session(host=DO2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds = ds_stack.client"
+    "DO1 = \"flower-test-group-1@openmined.org\"\n",
+    "DO2 = \"flower-test-group-2@openmined.org\"\n",
+    "do1_guest = sy.init_session(host=DO1)\n",
+    "do2_guest = sy.init_session(host=DO2)"
    ]
   },
   {
@@ -91,9 +95,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "SYFTBOX_DATASET_NAME = \"pima-indians-diabetes-database\"\n",
     "\n",
-    "os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(ds_stack.client.config_path)\n",
     "os.environ[\"LOGURU_LEVEL\"] = \"DEBUG\"\n",
     "os.environ[\"SYFT_FLWR_MSG_TIMEOUT\"] = \"60\"\n",
     "\n",
@@ -109,7 +114,7 @@
     "\n",
     "DS can access the DOs' mock data, but can't access the private data\n",
     "\n",
-    "<img src=\"../images/dsExploresDOsDatasets.png\" width=\"71%\" alt=\"DS explores datasets\">"
+    "<img src=\"../images/dsExploresDOsDatasets.png\" width=\"70%\" alt=\"DS explores datasets\">"
    ]
   },
   {
@@ -157,10 +162,10 @@
     "\n",
     "A `syft_flwr` project requires minimal changes to a Flower project:\n",
     "\n",
-    "1. A `syft_flwr` project has the same structure as an [example federated analytics Flower project](https://flower.ai/blog/2023-01-24-federated-analytics-pandas/):\n",
+    "1. A `syft_flwr` project has the same structure as a [Flower project](https://flower.ai/docs/framework/tutorial-quickstart-pytorch.html):\n",
     "```\n",
-    "fed-analytics-diabetes\n",
-    "├── fed-analytics-diabetes\n",
+    "<your-project-name>\n",
+    "├── <your-project-name>\n",
     "│   ├── __init__.py\n",
     "│   ├── client_app.py   # Defines your ClientApp\n",
     "│   ├── server_app.py   # Defines your ServerApp\n",
@@ -174,9 +179,10 @@
    "metadata": {},
    "source": [
     "\n",
-    "Concretely, for federated diabetes analytics, we have the project code under the path `../fed-analytics-diabetes`\n",
+    "Concretely, for diabetes prediction, we have the project code under the path `../fed-analytics-diabetes`\n",
     "\n",
-    "<img src=\"../images/dsPreparesSyftFlwrProject.png\" width=\"20%\" alt=\"DS prepares code\">\n"
+    "\n",
+    "<img src=\"../images/dsPreparesSyftFlwrProject.png\" width=\"30%\" alt=\"DS explores datasets\">\n"
    ]
   },
   {
@@ -185,7 +191,7 @@
    "source": [
     "where the DS will run the `ServerApp` (defined in `server_app.py`), and the `ClientApp` (in `client_app.py`)\n",
     "\n",
-    "<img src=\"../images/dsSyftFlwrProjectArch.png\" width=\"69%\" alt=\"syft_flwr project architecture\">\n"
+    "<img src=\"../images/dsSyftFlwrProjectArch.png\" width=\"70%\" alt=\"Your second image description\">\n"
    ]
   },
   {
@@ -194,6 +200,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pathlib import Path\n",
+    "\n",
     "SYFT_FLWR_PROJECT_PATH = Path(\"../fed-analytics-diabetes\")\n",
     "assert SYFT_FLWR_PROJECT_PATH.exists()"
    ]
@@ -202,9 +210,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Compared to a Flower project, the DS only needs to change a bit of how the `client_app.py`, which runs on the data owners' datasites, loads the data:\n",
+    "2. Compared to a Flower project, the DS only needs to change a bit of how the `client_app.py`, which runs on the data owners' datasites, loads the data where the `load_syftbox_dataset` (used by `syft_flwr`) and the `load_flwr_data` (used by Flower) differ a bit like below:  \n",
     "\n",
-    "<img src=\"../images/dsCodeLoadsClientData.png\" width=\"70%\" alt=\"load datasets comparison\">\n"
+    "<img src=\"../images/dsCodeLoadsClientData.png\" width=\"90%\" alt=\"load datasets comparison\">\n"
    ]
   },
   {
@@ -282,8 +290,7 @@
    "outputs": [],
    "source": [
     "# clean up\n",
-    "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"fed_analytics_diabetes\" / \"__pycache__\"}  # clean before submitting\n",
-    "!rm -rf {\"../weights/\"}"
+    "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"fed_analytics_diabetes\" / \"__pycache__\"}  # clean before submitting"
    ]
   },
   {
@@ -292,7 +299,7 @@
    "source": [
     "Now the DS can run `syft_flwr` simulation on DO's mock data by launching 2 threads that run DOs code and a thread that runs the DS code \n",
     "\n",
-    "<img src=\"../images/dsRunsSyftFLWRSimulation.png\" width=\"53%\" alt=\"ds runs simulation with syft_flwr.run\">"
+    "<img src=\"../images/dsRunsSyftFLWRSimulation.png\" width=\"50%\" alt=\"client_fn comparison\">"
    ]
   },
   {
@@ -318,9 +325,9 @@
     "\n",
     "<img src=\"../images/dsAggregatedFiguresFolder.png\" width=\"20%\" alt=\"DS aggregated figures folder\">\n",
     "\n",
-    "However, since running simulation is done on mock data, the local frequency is very low (only 7 as maximum for age)\n",
+    "However, since running simulation is done on mock data, the local frequency is very low (only 10 as maximum for age)\n",
     "\n",
-    "<img src=\"../images/dsLocalFrequencyMock.png\" width=\"50%\" alt=\"local frequency mock data\">"
+    "<img src=\"../images/dsLocalFrequencyMock(2).png\" width=\"50%\" alt=\"local frequency mock data\">"
    ]
   },
   {
@@ -336,7 +343,7 @@
    "source": [
     "The DS submits the code in `fed-analytics-diabetes` to the DO's datasites\n",
     "\n",
-    "<img src=\"../images/dsSubmitsJobs.png\" width=\"50%\" alt=\"DS submits jobs\">"
+    "<img src=\"../images/dsSubmitsJobs.png\" width=\"54%\" alt=\"DS submits jobs\">"
    ]
   },
   {
@@ -372,7 +379,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../images/dsWaitsForJobsToBeApproved.png\" width=\"30%\" alt=\"DS waits for jobs to be approved\">"
+    "<img src=\"../images/dsWaitsForJobsToBeApproved.png\" width=\"35%\" alt=\"DS waits for jobs to be approved\">"
    ]
   },
   {
@@ -415,7 +422,7 @@
     "\n",
     "Now, the local frequency when running job on private data is much higher compared to running simulation on mock data\n",
     "\n",
-    "<img src=\"../images/dsLocalFrequencyReal.png\" width=\"50%\" alt=\"DS aggregated frequency real\">"
+    "<img src=\"../images/dsLocalFrequencyReal(2).png\" width=\"50%\" alt=\"DS aggregated frequency real\">"
    ]
   },
   {
