--- a/notebooks/fl-diabetes-prediction/distributed/ds.ipynb
+++ b/notebooks/fl-diabetes-prediction/distributed/ds.ipynb
@@ -367,7 +367,7 @@
    "source": [
     "for client in do_clients:\n",
     "    print(f\"sending job to {client.host}\")\n",
-    "    job = client.jobs.submit(\n",
+    "    job = client.job.submit(\n",
     "        name=\"fl-diabetes-prediction\",\n",
     "        user_code_path=SYFT_FLWR_PROJECT_PATH,\n",
     "        dataset_name=SYFTBOX_DATASET_NAME,\n",
